<resources>
    <string name="app_name">La Vida Del Coffee</string>

    <string name="title">La Vida del Coffee</string>
    <string name="startButton">" Start "</string>

    <string name="latteText">Latte</string>
    <string name="cappText">Cappuccino</string>
    <string name="macchiatoText">Macchiato</string>
    <string name="americanoText">Americano</string>
    <string name="espressoText">Espresso</string>
    <string name="mochaText">Mocha</string>

    <string name="icedlatteText">Iced Latte</string>
    <string name="icedcappText">Iced Cappuccino</string>
    <string name="icedlattemacchiatoText">Iced Latte Macchiato</string>
    <string name="icedcaramelmacchiatoText">Iced Caramel Macchiato</string>
    <string name="icedamericanoText">Iced Americano</string>
    <string name="icedmochaText">Iced Mocha</string>

    <string name="CappuccinoInfo">1/3 espresso; 1/3 steamed milk; 1/3 foamed milk \n75 mg caffeine per 12 oz.</string>
    <string name="CappuccinoDescription">Cappuccino originated in Italy. The traditional cappuccino is prepared with two or one shots of rich espresso, topped with foamed milk. Cappuccino provides various psychological health benefits such as mind stimulation and mental alertness.</string>

    <string name="LatteInfo">1/6 espresso; 4/6 steamed milk; 1/6 foamed milk \n75 mg caffeine per 12 oz.</string>
    <string name="LatteDescription">Latte originated in Italy. It is prepared with a rich shot of espresso, layered with steamed milk, and topped with a thin layer of foam. Lattes are very diluted and have a sweet, mellow flavor that can light up your day.</string>

    <string name="mochaDescription">A mocha consists of espresso and hot milk with added chocolate, typically in the form of sweet cocoa powder or chocolate syrup. Mocha is relatively low in caffeine and tastes more like hot chocolate, which makes it a great coffee choice for both morning and afternoon.</string>
    <string name="mochaInfo">2/5 espresso; 2/5 chocolate syrup; 1/5 steamed milk \n95 mg caffeine per 12 oz.</string>

    <string name="americanoInfo">2/5 espresso; 3/5 hot water \n150 mg caffeine per 12 oz.</string>
    <string name="icedamericanoInfo">2/5 espresso; 3/5 water \n150 mg caffeine per 12 oz.</string>
    <string name="americanoDescription">Cafe Americano is a watered-down shot of espresso with a flavor arriving very close to simple, brewed coffee. The strong espresso in Americano awakens and increases productivity, but consumption is not suggested after 7pm.</string>

    <string name="macchiatoInfo">3/4 espresso; 1/4 steamed milk \n169 mg caffeine per 12 oz.</string>

    <string name="icedmacchiatoInfo">2/5 espresso; 2/5 steamed milk; 1/5 foamed milk\n150 mg caffeine per 12 oz.</string>
    <string name="caramelmacchiatoInfo">1/5 espresso; 1/5 caramel syrup; 3/5 steamed milk\n112 mg caffeine per 12 oz.</string>

    <string name="macchiatoDescription">A macchiato is simply a shot of espresso topped with foamed milk. Macchiato can help gain focusness and mental alertness and also keep your blood pressure in control. However, high intake may cause side effects, such as increases in anxiety and nervousness.</string>

    <string name="espressoDescription">"Espresso is coffee brewed by forcing out a small amount of nearly boiling water under pressure through finely ground coffee beans. It is always a good idea to stop ordering espresso 8 hours before you go to bed.  "</string>
    <string name="espressoInfo">single shot or double shot of espresso \n65 mg caffeine per 1 oz.</string>
    <string name="locationButton">LOCATIONS </string>


    <string name="star">Starbucks</string>
    <string name="wood">Woodstar Café</string>
    <string name="roost">The Roost</string>
    <string name="cc">Campus Center</string>
    <string name="shelburne">Shelburne Falls</string>

    <string name="price_225">$2.25</string>
    <string name="price_275">$2.75</string>
    <string name="price_190">$1.90</string>
    <string name="price_224">$2.24</string>
    <string name="price_325">$3.25</string>
    <string name="price_350">$3.50</string>
    <string name="price_294">$2.94</string>
    <string name="price_300">$3.00</string>
    <string name="price_322">$3.22</string>
    <string name="pprice_395">$3.95</string>
    <string name="price_195">$1.95</string>
    <string name="price_192">$1.92</string>
    <string name="price_160">$1.60</string>
    <string name="price_206">$2.06</string>
    <string name="price_375">$3.75</string>
    <string name="price_395">$3.95</string>
    <string name="price_346">$3.46</string>
    <string name="home_text">HOME</string>


    <string name="temperature_question">Are you in the mood for hot or cold coffee?</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>

    <string name="consumed_question">How many cups (12oz.) of coffee have you already consumed today?</string>
    <string name="consumed_hint">Please enter a number here (e.g. 0, 1, 2)</string>
    <string name="consumed_button">submit</string>
    <string name="limitReached">YOU HAVE REACHED YOUR COFFEE LIMIT!</string>
    <string name="dontCosume">Please do not consume anymore coffee or caffeine today!</string>
    <string name="nextButton">next</string>
    <string name="coffee_preference">What do you like in your coffee? (Please pick only 1) </string>
    <string name="milk_text">Milk</string>
    <string name="froth_text">Froth</string>
    <string name="none_button">None of the above options</string>
    <string name="chocolate_string">Chocolate</string>
    <string name="personality_question">How do you describe your personality? (Please pick only 1)</string>
    <string name="personality_americano">quiet, moody</string>
    <string name="personality_latte">comfort seeker, laid back</string>
    <string name="personality_esp">hardworking</string>
    <string name="personality_capp">sociable, creative, optimistic</string>
    <string name="personality_mocha">sweet, fun-loving</string>
    <string name="personality_mac">reserved, traditional, confident</string>
    <string name="bedtime">When do you usually go to bed? Please enter only the hour in 24-hour time</string>
    <string name="bedtime_hint">e.g. 9pm = 21; 10pm = 22; 11pm = 23</string>
    <string name="enterNameText">Please Enter your Name Here:</string>
    <string name="inputName">Enter Name Here!</string>

</resources>
