<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smithjterm.lavidadelcoffee.MochaLocationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBrown"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="254dp">

        <ImageView
            android:id="@+id/coffeeLove"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="90dp"
            android:layout_marginStart="90dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/map"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:id="@+id/horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/coffeeLove"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">


            <LinearLayout
                android:id="@+id/location_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="164dp">

                <EditText
                    android:id="@+id/starbucksText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/star" />

                <EditText
                    android:id="@+id/woodText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/wood" />

                <EditText
                    android:id="@+id/roostText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/roost" />

                <EditText
                    android:id="@+id/ccText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/cc" />

                <EditText
                    android:id="@+id/editText9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/shelburne" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/starbucksPriceAm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/price_375" />

                <EditText
                    android:id="@+id/woodPriceAm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/price_346" />

                <EditText
                    android:id="@+id/roostPriceAm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/price_395" />

                <EditText
                    android:id="@+id/ccPriceAm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/price_325" />

                <EditText
                    android:id="@+id/shelPriceAm2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/price_375" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/horizontal"
            android:layout_alignEnd="@+id/coffeeLove"
            android:layout_marginEnd="51dp"
            android:text="@string/locationButton"
            android:textColor="@color/colorBrown"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/homeButton_mocha"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:background="@drawable/home"
            android:onClick="resetApp"
            android:text="@string/home_text"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
