<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smithjterm.lavidadelcoffee.personalityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/consumed_question"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:text="@string/personality_question"
            android:textAlignment="center"
            android:textColor="@color/colorBrown"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="143dp" />

        <CheckBox
            android:id="@+id/latteBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/personality_latte"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/amBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/personality_americano"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cappBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/personality_capp"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/espBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/personality_esp"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/macBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/personality_mac"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/mochaBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="60dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/personality_mocha"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/bedtimeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"

            android:baselineAlignBottom="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/questionlove" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
