<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smithjterm.lavidadelcoffee.MacchiatoLocationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBrown"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="64dp">

        <ImageView
            android:id="@+id/bedtimeImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/map"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:id="@+id/horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bedtimeImage"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="20dp">


            <LinearLayout
                android:id="@+id/location_grid"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="164dp">

                <TextView
                    android:id="@+id/starbucksText"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/star"
                    android:textColorLink="@android:color/black"/>

                <TextView
                    android:id="@+id/roostText"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/roost"
                    android:textColorLink="@android:color/black"/>

                <TextView
                    android:id="@+id/ccText"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/cc"
                    android:textColorLink="@android:color/black"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/starbucksPriceAm"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/price_395"
                    android:textColorLink="@android:color/black"/>

                <TextView
                    android:id="@+id/roostPriceAm"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/price_275"
                    android:textColorLink="@android:color/black"/>

                <TextView
                    android:id="@+id/ccPriceAm"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/price_190"
                    android:textColorLink="@android:color/black"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/horizontal"
            android:layout_alignEnd="@+id/bedtimeImage"
            android:layout_marginEnd="51dp"
            android:text="@string/locationButton"
            android:textColor="@color/colorBrown"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/homeButton_mocha"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:background="@drawable/home"
            android:onClick="resetApp"
            android:text="@string/home_text"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
