<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smithjterm.lavidadelcoffee.temperatureActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/consumed_question"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:text="@string/temperature_question"
            android:textAlignment="center"
            android:textColor="@color/colorBrown"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="143dp" />

        <CheckBox
            android:id="@+id/hotBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/hot"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/coldBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/cold"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/bedtimeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:baselineAlignBottom="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/coffeethermometer" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
